--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="create_options">
-    <a href="/home">
+    <a href="/">
       <div id="option_1">
         <p>&lt; Return to Home</p>
       </div>
