--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,7 +3,7 @@
 <div class="vertical-label">{{userRole}}</div>
 
 <div class="header">
-    <a href="/reserve-home" id="website_name">@LabRes</a>
+    <a href="/" id="website_name">@LabRes</a>
 
     <button class="dropbtn" onclick="myFunction()">
         <img src="/resources/profile_stock.png" class="profile-pic">
