added view resv (edit, info)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,18 @@
             <link rel="stylesheet" href="/reserve_view.css">
         {{/if}}
 
+        {{#if isResEdit}}
+            <link rel="stylesheet" href="/reserve_edit.css">
+        {{/if}}
+
+        {{#if isResInfo}}
+            <link rel="stylesheet" href="/reserve_info.css">
+        {{/if}}
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </head>
     
     <body>
