added profile (info, edit)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,14 @@
             <link rel="stylesheet" href="/reserve_info.css">
         {{/if}}
 
+        {{#if isProfileInfo}}
+            <link rel="stylesheet" href="/profile_info.css">
+        {{/if}}
+
+        {{#if isProfileEdit}}
+            <link rel="stylesheet" href="/profile_edit.css">
+        {{/if}}
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
