--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -18,7 +18,7 @@
         <div class="reservation-row current" role="button" tabindex="0" 
         onclick="location.href='/res_edit'">
          
-          <span class="date">{{date}}</span>                <!-- Replace onclick -->
+          <span class="date">{{date}}</span>                <!-- Modify onclick -->
           <span class="divider"></span>
           <span class="time">{{time}}</span>
           <span class="laboratory">{{laboratory}}</span>
@@ -35,7 +35,7 @@
         <div class="reservation-row completed" role="button" tabindex="0"
           onclick="location.href='/res_info'">
 
-          <span class="date">{{date}}</span>                <!-- Replace onclick -->
+          <span class="date">{{date}}</span>                <!-- Modify onclick -->
           <span class="divider"></span>
           <span class="time">{{time}}</span>
           <span class="laboratory">{{laboratory}}</span>
