CSS Not working/rendering

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         {{/if}}
 
         {{#if isProfileInfo}}
-            <link rel="stylesheet" href="/profile_info.css">
+            <link rel="stylesheet" href="/profile_info.css"> <!-- NOT WORKING-->
         {{/if}}
 
         {{#if isProfileEdit}}
