--- a/views/auth_ref/Welcome.html
+++ b/views/auth_ref/Welcome.html
@@ -22,8 +22,8 @@
               <div class="overlay-text">
                 <h1>Lab Reservation Made Easy!</h1>
                 <div class="login-buttons">
-                  <button class="btn btn-outline-primary" onclick="window.location.href='Login.html'">Log In</button>
-                  <button class="btn btn-outline-secondary" onclick="window.location.href='Register.html'">Sign Up</button>
+                  <button class="btn btn-outline-primary" onclick="window.location.href='/login'">Log In</button>
+                  <button class="btn btn-outline-primary" onclick="window.location.href='/register'">Sign Up</button>
                 </div>
               </div>
             </div>
