--- a/views/auth_ref/Login.html
+++ b/views/auth_ref/Login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>LABS Reservation Login</title>
-        <link rel="stylesheet" href="MC1.css" />
+        <link rel="stylesheet" href="/auth_ref/MC1.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"  rel="stylesheet">
         <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@@ -34,7 +34,7 @@
                 <br>
                 <button type="submit" class="btn btn-outline-success">Submit</button>
                 </form>
-                <p>Don't have an Account? <a href="Register.html">Click Here</a> to Sign up!</p>
+                <p>Don't have an Account?  <button onclick="window.location.href='/auth_ref/Register.html'" class="btn btn-link p-0 align-baseline">Click Here</button> to Sign up!</p>
             </div>
         </div>
 
