--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <body>
         <h1>Student</h1>
         <h3>Register, Welcome and Login pages</h3><br>
-        <a href="/">Home Page</a>
+        <a href="/home">Home Page</a>
         <br>
         <a href="..\STUDENT\authentication\Register.html">Sign Up page</a>
         <br>
