--- a/views/prof_info.handlebars
+++ b/views/prof_info.handlebars
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="create_options">
-            <a href="/">
+            <a href="/home">
                 <div id="option_1">
                     <p>< Return to Home</p>
                 </div>
