--- a/views/auth_ref/Register.html
+++ b/views/auth_ref/Register.html
@@ -55,7 +55,7 @@
         <button type="submit" class="btn btn-outline-success">Submit</button>
       </form>
 
-      <p>Already have an Account?  <button onclick="window.location.href='/auth_ref/Login.html'" class="btn btn-link p-0 align-baseline">Click Here</button> to Log in!</p>
+      <p>Already have an Account?  <button onclick="window.location.href='/login'" class="btn btn-link p-0 align-baseline">Click Here</button> to Log in!</p>
     </div>
   </div>
 </body>
