userId fix stuff

--- a/views/auth_ref/Login.html
+++ b/views/auth_ref/Login.html
@@ -21,7 +21,7 @@
             <div class="register">
               <br><br>
                 <h1>Log In</h1><br>
-                <form id="loginForm" method="POST" action="/Login">
+                <form id="loginForm" method="POST" action="/login">
                 <h3>DLSU Email</h3><br>
                 <input type="email" name="DLSUemail" placeholder="DLSU Email"><br><br>
 
