--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -11,7 +11,7 @@
 
     <div class="profile-dropdown">
         <div class="dropdown-menu" id="dropdownMenu">
-            <a href="/prof_info">See User Profile</a>
+            <a href="/prof_info?userId={{user._id}}">See User Profile</a>
             <a href="/logout">Sign Out Account</a>
         </div>
     </div>
