--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,6 +35,10 @@
             <link rel="stylesheet" href="/profile_edit.css">
         {{/if}}
 
+        {{#if isLab}}
+            <link rel="stylesheet" href="/lab.css">
+        {{/if}}
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
