--- a/views/laboratory.handlebars
+++ b/views/laboratory.handlebars
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="create_options">
 
-                <a href="/create"><div id="option_1">
+                <a href="/create?userId={{user._id}}"><div id="option_1">
                     <p>< Return to Filter Reservations</p>
                 
                 </div></a>
