--- a/views/prof_edit.handlebars
+++ b/views/prof_edit.handlebars
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="create_options">
-    <a href="/prof_info">
+    <a href="/prof_info?userId={{user._id}}">
       <div id="option_1">
         <p>< Return to User Profile</p>
       </div>
