--- a/views/prof_info.handlebars
+++ b/views/prof_info.handlebars
@@ -13,7 +13,7 @@
         <!-- Profile Section -->
         <div class="profile-section">
             <div class="profile-info">
-                <img src="{{user.image}}" alt="Header Profile Picture" class="profile-pic">
+                <img src="{{user.profile_pic_url}}" alt="Header Profile Picture" class="profile-pic">
                 <h1>{{user.name}}</h1>
                 <div class="description-box">
                     <p>{{user.bio}}</p>
