--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -38,7 +38,8 @@
         </div>
         <div class="labs_section">
             {{#each laboratories}}
-                <a href="{{this.link}}" class="Labs">
+                {{!-- <a href="{{this.link}}" class="Labs"> --}}
+                <a href="/laboratory/userId={{user._id}}&labId={{this.labId}}" class="Labs">
                     <h3>{{this.name}}</h3>
                     <h3>{{this.occupancy}}</h3>
                 </a>
