profile link fix

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -39,7 +39,7 @@
         <div class="labs_section">
             {{#each laboratories}}
                 {{!-- <a href="{{this.link}}" class="Labs"> --}}
-                <a href="/laboratory/userId={{user._id}}&labId={{this.labId}}" class="Labs">
+                <a href="{{this.link}}" class="Labs">
                     <h3>{{this.name}}</h3>
                     <h3>{{this.occupancy}}</h3>
                 </a>
