--- a/public/reserve_create.css
+++ b/public/reserve_create.css
@@ -1,18 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
-    font-family: "inter", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
-.interFont {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+/* Reset and base styles */
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Inter";
-            
-    background-color:rgb(237, 237, 237);
+  font-family: "Inter", sans-serif;
+  background-color: rgb(237, 237, 237);
 }
 
 .container  {
