--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -10,7 +10,7 @@
     <div class="profile-dropdown">
         <div class="dropdown-menu" id="dropdownMenu">
             <a id="profile-link">See User Profile</a>
-            <a href="/logout">Sign Out Account</a>
+            <a href="auth_ref/Welcome.html">Sign Out Account</a>
         </div>
     </div>
 
