--- a/views/prof_info.handlebars
+++ b/views/prof_info.handlebars
@@ -16,7 +16,7 @@
                 <img src="{{user.profile_pic_url}}" alt="Header Profile Picture" class="profile-pic">
                 <h1>{{user.first_name}} {{user.last_name}}</h1>
                 <div class="description-box">
-                    <p>{{user.bio}}</p>
+                    <p>{{user.description}}</p>
                 </div>
             </div>
 
