--- a/public/profile_edit.css
+++ b/public/profile_edit.css
@@ -64,14 +64,14 @@ a {
     align-items: center; 
     justify-content: center; 
     background-color: rgb(236, 236, 236);
-    max-height: 500px;
-    max-width: 500px;
-    min-width: 500px;
-    min-height: 500px;
+    max-height: 600px;
+    max-width: 600px;
+    min-width: 600px;
+    min-height: 600px;
 }
 
 .profile-info .profile-pic {
-    margin-top: 30px;
+    margin-top: 20px;
     max-height: 140px;
     max-width: 140px;
     min-height: 140px;
@@ -88,16 +88,11 @@ a {
     cursor: pointer;
 }
 
-.profile-info .pen {
-    width: 50px;
-    height: 50px;
-    cursor: pointer; 
+.profile-info form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-.profile-info #pen1 {
-    transform: translate(400%, -100%);
-}
-
 
 .description-box {
     background-color: white;
@@ -109,22 +104,44 @@ a {
     border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.manage-profile #edit-button {
-    background-color: rgb(47, 88, 253);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
+.manage-profile {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 20px;
+    flex-direction: row;
 }
 
-.manage-profile #delete-button {
-    color: white;
-    border: none;
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.button-container .save-button, .delete-button{
     padding: 10px 20px;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
-    background-color: red;
+    font-size: 14px;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.save-button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.delete-button {
+    background-color: #f44336;
+    color: white;
+}
+
+button:hover {
+    opacity: 0.5;
+    transition: opacity 0.3s ease;
 }
 
 .reservations-info {
