--- a/views/prof_edit.handlebars
+++ b/views/prof_edit.handlebars
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="create_options">
     <a href="/prof_info?userId={{user._id}}">
@@ -11,17 +10,28 @@
   <div class="profile-section">
     <div class="profile-info">
       <img src="{{user.profile_pic_url}}" alt="Header Profile Picture" class="profile-pic">
+      
       <button id="edit-pfp-button" class="button">Edit</button>
 
-      <h1>{{user.first_name}} {{user.last_name}}</h1>
+      <form action="/prof_edit/save-edit" method="POST">
+        <input type="hidden" id="userId" value="{{user._id}}">
 
-      <div class="description-box">
-        <p>{{description}}</p>
-      </div>
-    </div>
+        <h2>First Name</h2>
+        <input type="text" name="first_name" value="{{user.first_name}}" required>
 
-    <div class="manage-profile">
-      <button id="delete-button" class="button">Delete Profile</button>
+        <h2>Last Name</h2>
+        <input type="text" name="last_name" value="{{user.last_name}}" required>
+
+        <h2>Description</h2>
+        <textarea name="description" rows="4" cols="50">{{user.description}}</textarea>
+
+        <input type="hidden" name="userId" value="{{user._id}}">
+
+        <div class="button-container">
+          <button id="edit-button" class="button save-button">Save Changes</button>
+          <button id="delete-button" class="button delete-button" formaction="/prof_edit/delete-profile" formmethod="POST">Delete Profile</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
