repush of the object fix

--- a/views/laboratory.handlebars
+++ b/views/laboratory.handlebars
@@ -18,7 +18,7 @@
                             <h3>Choose a date:</h3>
                             <select name="Days" id="Days">
                                 {{#each days}}
-                                    <option value="{{this.value}}">{{this.label}}</option>
+                                    <option value="{{this}}">{{this}}</option>
                                 {{/each}}
                             </select>
                             <h3>Choose start time:</h3>
