--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,7 +4,7 @@
     <a href="/home?userId={{user._id}}" id="website_name">@LabRes</a>
 
     <button class="dropbtn" onclick="myFunction()">
-        <img src="/resources/profile_stock.png" class="profile-pic">
+        <img src="/user/{{user._id}}/image" alt="Profile Picture" class="profile-pic" onerror="this.onerror=null; this.src='/resources/profile_stock.png';">
     </button>
 
     <div class="profile-dropdown">
