--- a/views/prof_info.handlebars
+++ b/views/prof_info.handlebars
@@ -13,7 +13,7 @@
         <!-- Profile Section -->
         <div class="profile-section">
             <div class="profile-info">
-                <img src="{{user.profile_pic_url}}" alt="Header Profile Picture" class="profile-pic">
+                <img src="/user/{{user._id}}/image" alt="Profile Picture" class="profile-pic" onerror="this.onerror=null; this.src='/resources/profile_stock.png';">
                 <h1>{{user.first_name}} {{user.last_name}}</h1>
                 <div class="description-box">
                     <p>{{user.description}}</p>
