--- a/public/profile_edit.css
+++ b/public/profile_edit.css
@@ -91,6 +91,7 @@ a {
 .profile-info form {
     display: flex;
     flex-direction: column;
+    border-radius: 20px;
     align-items: center;
 }
 
